// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> 1`] = `
"
Host URL              │https://openam-frodo-dev.forgeblocks.com/am                                       
AM Version            │9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)
Subject (Type)        │Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)   
Deployment Type       │cloud                                                                             
Cookie Name           │6ac6499e9da2071                                                                   
backupRegion          │us-south1                                                                         
Promotion Done        │false                                                                             
Immutable             │false                                                                             
Locked                │false                                                                             
Placeholder Management│CUSTOMER                                                                          
Region                │us-central1                                                                       
Tier                  │other                                                                             
                      │                                                                                  
  ipAddresses         │                                                                                  
                     0│34.58.53.151                                                                      
                      │                                                                                  
  promotionTierInfo   │                                                                                  
       tierDisplayName│other                                                                             
  upperTierDisplayName│                                                                                  
  lowerTierDisplayName│                                                                                  
                      │                                                                                  
    tiers             │                                                                                  
                     0│other                                                                             

Bearer token:
<access token>
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info 1`] = `
"
Host URL              │https://openam-frodo-dev.forgeblocks.com/am                                       
AM Version            │9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)
Subject (Type)        │Frodo-SA-1782747461119 [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)   
Deployment Type       │cloud                                                                             
Cookie Name           │6ac6499e9da2071                                                                   
backupRegion          │us-south1                                                                         
Promotion Done        │false                                                                             
Immutable             │false                                                                             
Locked                │false                                                                             
Placeholder Management│CUSTOMER                                                                          
Region                │us-central1                                                                       
Tier                  │other                                                                             
                      │                                                                                  
  ipAddresses         │                                                                                  
                     0│34.58.53.151                                                                      
                      │                                                                                  
  promotionTierInfo   │                                                                                  
       tierDisplayName│other                                                                             
  upperTierDisplayName│                                                                                  
  lowerTierDisplayName│                                                                                  
                      │                                                                                  
    tiers             │                                                                                  
                     0│other                                                                             

Bearer token:
<access token>
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "<token id>",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "<token id>",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "<token id>",
  "bearerToken": "<access token>",
  "backupRegion": "us-south1",
  "config_promotion_done": false,
  "immutable": false,
  "ipAddresses": [
    "34.58.53.151"
  ],
  "locked": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  },
  "region": "us-central1",
  "tier": "other"
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> 1`] = `
"
Host URL              │https://openam-frodo-dev.forgeblocks.com/am                                       
AM Version            │9.0.0-SNAPSHOT Build c6c99b2f35d4d905937aeef7e7b8426bf5d8e820 (2026-June-12 09:10)
Subject (Type)        │volker.scheuber@forgerock.com (User)                                              
Deployment Type       │cloud                                                                             
Cookie Name           │6ac6499e9da2071                                                                   
backupRegion          │us-south1                                                                         
Promotion Done        │false                                                                             
Immutable             │false                                                                             
Locked                │false                                                                             
Placeholder Management│CUSTOMER                                                                          
Region                │us-central1                                                                       
Tier                  │other                                                                             
                      │                                                                                  
  ipAddresses         │                                                                                  
                     0│34.58.53.151                                                                      
                      │                                                                                  
  promotionTierInfo   │                                                                                  
       tierDisplayName│other                                                                             
  upperTierDisplayName│                                                                                  
  lowerTierDisplayName│                                                                                  
                      │                                                                                  
    tiers             │                                                                                  
                     0│other                                                                             

Session token:
<token id>

Bearer token:
<access token>
"
`;
